2007-09-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-c.el: New file.

2007-09-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-load-file): Do reload if prefix arg.

2007-09-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-indent.el (turn-on-haskell-indent): Fix keymap setup code.

2007-09-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-find-project-root): New var, to
	replace inferior-haskell-use-cabal.
	(inferior-haskell-find-project-root): New function.
	(inferior-haskell-load-file): Use them.
	(inferior-haskell-module-alist): Use a temp buffer so as not to write
	out random junk before/after the actual module alist.

2007-08-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-load-file): Re-add the `reload' arg.
	(inferior-haskell-reload-file): Re-instate the command.

	* haskell-mode.el (turn-on-haskell-hugs, turn-on-haskell-ghci):
	Make people work harder to use those obsolete packages.,

	* haskell-indent.el (haskell-indent-map): New var.
	(turn-on-haskell-indent, turn-off-haskell-indent): Use it together with
	keymap inheritance instead of inplace modifications.

	* haskell-indent.el (turn-on-haskell-indent): Add alternate binding for
	C-c C-|.  Suggested by David House <dmhouse@gmail.com>.

2007-07-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-type): Fix call to message.

2007-07-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Update license to GPLv3.

	* haskell-mode.el (haskell-ident-at-point): Extend it to cover
	all elements of a qualified name.

2007-06-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-mode.el (haskell-mode-map): Remove C-c C-r binding.

	* inf-haskell.el (inferior-haskell-load-file): Remove reload arg.
	(inferior-haskell-reload-file): Remove.

2007-06-29  Stefan Monnier  <monnier@iro.umontreal.ca>
